test/libsolidity/syntaxTests/string/string_unterminated_no_new_line.sol
contract test {
    function f() pure public { "abc\
// ----
// ParserError: (47-53): Expected primary expression.